--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
 </nav>
 
-<section class="bg-home" id="home" style="background-image: url('images/bgimg.jpg')">
+<section class="bg-home" id="home" style="background-image: url('images/bgimg.webp')">
     <div class="bg-overlay"></div>
     <div id="particles-js"></div>
     <div class="home-center">
@@ -131,7 +131,7 @@
                     <div class="tab-pane fade show active" id="story" role="tabpanel" aria-labelledby="story-tab">
                         <div class="text-center">
                             <div class="about-img mt-5 mb-5">
-                                <img src="images/Profile-pic.png" alt="Profile Image" class="img-fluid mx-auto d-block rounded-circle">
+                                <img src="images/Profile-pic.webp" alt="Profile Image" class="img-fluid mx-auto d-block rounded-circle">
                             </div>
                             <h3 class="mb-3">Jayant Goel
                                 <small class="text-muted"> - Full Stack Web Developer, Android & Data Science Enthusiast </small>
@@ -332,7 +332,7 @@
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
                     <a aria-label="home" href="https://github.com/JayantGoel001/AI-Image-Caption-Bot" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/aiicb.png" alt="1" />
+                        <img class="item-container img-fluid mx-auto" src="images/aiicb.webp" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
                                 <h5>AI Image Caption Bot</h5>
@@ -349,7 +349,7 @@
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
                     <a aria-label="home" href="https://github.com/JayantGoel001/AI-Music-Generation" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/aimg.png" alt="1" />
+                        <img class="item-container img-fluid mx-auto" src="images/aimg.webp" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
                                 <h5>AI Music Generation</h5>
@@ -366,7 +366,7 @@
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
                     <a aria-label="home" href="https://github.com/JayantGoel001/School-Donation-Analysis" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/sda.png" alt="1" />
+                        <img class="item-container img-fluid mx-auto" src="images/sda.webp" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
                                 <h5>A School Donation Analysis</h5>
@@ -382,7 +382,7 @@
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
                     <a aria-label="image" href="https://github.com/JayantGoel001/A-Social-Media" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/asm.png" alt="1" />
+                        <img class="item-container img-fluid mx-auto" src="images/asm.webp" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
                                 <h5>A Social Media</h5>
@@ -399,7 +399,7 @@
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
                     <a aria-label="image" href="https://github.com/JayantGoel001/E-Commerce-Site" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/ecs.png" alt="1" />
+                        <img class="item-container img-fluid mx-auto" src="images/ecs.webp" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
                                 <h5>E-Commerce Site</h5>
@@ -414,7 +414,7 @@
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
                     <a aria-label="image" href="https://github.com/JayantGoel001/URL-Shortner" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/us.png" alt="1" />
+                        <img class="item-container img-fluid mx-auto" src="images/us.webp" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
                                 <h5>URL Shortner</h5>
@@ -432,7 +432,7 @@
 </section>
 
 <section class="section pointer" id="trainings">
-    <img src="images/footer-cloud.svg" class="cloud-bg" alt="Footer">
+    <img src="images/footer-cloud.webp" class="cloud-bg" alt="Footer">
     <div class="container z-index">
         <div class="row justify-content-center txt-bg txt-bg-training">
             <div class="col-lg-6">
@@ -613,15 +613,15 @@
         <div class="container-ach">
             <div class="box col-lg-4">
                 <h2 class="name">6 ★ in Problem Solving with 3200+ points on HackerRank</h2>
-                <img src="images/HackerRank.png" class="ach-img" alt="HackerRank"/>
+                <img src="images/HackerRank.webp" class="ach-img" alt="HackerRank"/>
             </div>
             <div class="box col-lg-4">
                 <h2 class="name">Won <strong>Hacktoberfest 2020</strong> T-shirt by creating more than <strong>20</strong> Pull Request.</h2>
-                <img src="images/hacktoberfest2020.png" class="ach-img" alt="Hacktoberfest"/>
+                <img src="images/hacktoberfest2020.webp" class="ach-img" alt="Hacktoberfest"/>
             </div>
             <div class="box col-lg-4">
                 <h2 class="name">Secured <strong>1st</strong> Position Among <strong>66 peers</strong> in Data Science Course.</h2>
-                <img src="images/data-science.svg" class="ach-img" alt="Data Science"/>
+                <img src="images/data-science.webp" class="ach-img" alt="Data Science"/>
             </div>
         </div>
     </div>
@@ -687,7 +687,7 @@
 
 <footer class="footer bg-light">
     <a aria-label="dev-image" href="https://dev.to/jayantgoel001" target="_blank" class="crayons-footer__mascot" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>DEV</em></strong>">
-        <img  alt="footer" width="52" height="120" src="images/monkey.png"/>
+        <img  alt="footer" width="52" height="120" src="images/monkey.webp"/>
     </a>
     <div class="container">
         <div class="row">
@@ -706,7 +706,7 @@
                             <a aria-label="image" href="https://gist.github.com/JayantGoel001/" target="_blank"
                                data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Gists</em></strong>"
                             >
-                                <img src="images/gist.png" width="20px" height="20px" alt="gist"/>
+                                <img src="images/gist.webp" width="20px" height="20px" alt="gist"/>
                             </a>
                         </li>
                         <li class="list-inline-item">
