--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="tab-pane fade show active" id="story" role="tabpanel" aria-labelledby="story-tab">
                         <div class="text-center">
                             <div class="about-img mt-5 mb-5">
-                                <img src="images/Profile-pic.webp" alt="Profile Image" class="img-fluid mx-auto d-block rounded-circle">
+                                <img src="images/Profile-pic.png" alt="Profile Image" class="img-fluid mx-auto d-block rounded-circle">
                             </div>
                             <h3 class="mb-3">Jayant Goel
                                 <small class="text-muted"> - Full Stack Web Developer, Android & Data Science Enthusiast </small>
