--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="col-lg-6 pointer">
                 <div class="section-title text-center mb-4 pb-2">
                     <div class="mb-5 pb-3">
-                        <i class="mdi mdi-account-settings h1 text-muted"></i>
+                        <i class="fas fa-user-graduate h1 text-muted"></i>
                     </div>
                     <h3 class="txt-fg">About me</h3>
                     <p class="text-muted mx-auto mb-0 mt-4 para-desc">Experience, technologies and background.</p>
@@ -319,7 +319,7 @@
             <div class="col-lg-6">
                 <div class="section-title text-center mb-4 pb-2">
                     <div class="mb-5 pb-3">
-                        <i class="mdi mdi-image-filter h1 text-muted"></i>
+                        <i class="far fa-clone h1 text-muted"></i>
                     </div>
                     <h3>My Portfolio</h3>
                     <p class="text-muted mx-auto mb-0 para-desc">Sample of some of my projects</p>
@@ -437,7 +437,7 @@
             <div class="col-lg-6">
                 <div class="section-title text-center mb-4 pb-2">
                     <div class="mb-5 pb-3">
-                        <i class="mdi mdi-all-inclusive h1 text-muted"></i>
+                        <i class="fas fa-infinity h1 text-muted"></i>
                     </div>
                     <h3>My Training</h3>
                     <p class="text-muted mx-auto mb-0 para-desc">Certifications and Work Profile</p>
@@ -602,7 +602,7 @@
             <div class="col-lg-6">
                 <div class="section-title text-center mb-4 pb-2">
                     <div class="mb-5 pb-3">
-                        <i class="mdi h1 mdi-trophy text-muted"></i>
+                        <i class="fas fa-trophy h1 text-muted"></i>
                     </div>
                     <h3>My Achievements</h3>
                     <p class="text-muted mx-auto mb-0 para-desc">Some of my Accomplishment.</p>
