--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
             <div class="col-lg-6">
                 <div class="section-title text-center mb-4 pb-2">
                     <div class="mb-5 pb-3">
-                        <i class="mdi mdi-headphones h1"></i>
+                        <i class="fas fa-headset h1"></i>
                     </div>
                     <h3 class="text-white">Contact me</h3>
                     <p class="text-white-50 mx-auto mb-0 para-desc">Address, Phone Number and Email Address.</p>
@@ -647,7 +647,7 @@
             >
                 <div class="contact-desc text-center">
                     <div class="contact-icon mb-3">
-                        <i class="mdi mdi-map-marker text-custom h3"></i>
+                        <i class="fas fa-street-view text-custom h3"></i>
                     </div>
                     <div class="contact-details">
                         <p class="mb-0" style="color: white;font-size: 16px"
@@ -660,7 +660,7 @@
             >
                 <div class="contact-desc text-center">
                     <div class="contact-icon mb-3">
-                        <i class="mdi mdi-phone-classic text-custom h3"></i>
+                        <i class="fas fa-mobile-alt text-custom h3"></i>
                     </div>
                     <div class="contact-details">
                         <p class="mb-0"><a aria-label="image" href="tel:+91-8377838183" style="color: white;font-size: 16px">+91-8377838183</a></p>
@@ -673,7 +673,7 @@
             >
                 <div class="contact-desc text-center">
                     <div class="contact-icon mb-3">
-                        <i class="mdi mdi-email-outline text-custom h3"></i>
+                        <i class="far fa-envelope text-custom h3"></i>
                     </div>
                     <div class="contact-details">
                         <p class="mb-0"><a aria-label="image" href="mailto: jgoel92@gmail.com" style="color: white;font-size: 16px">jgoel92@gmail.com</a></p>
@@ -711,7 +711,7 @@
                         <li class="list-inline-item">
                             <a aria-label="image" href="https://www.linkedin.com/in/JayantGoel001/" target="_blank"
                                data-toggle="tooltip" data-placement="right" data-html="true" title="<strong><em>LinkedIn</em></strong>">
-                                <i class="mdi mdi-linkedin dark"></i>
+                                <i class="fab fa-linkedin-in dark h6"></i>
                             </a>
                         </li>
                         <br/>
@@ -719,7 +719,7 @@
                         <li class="list-inline-item">
                             <a aria-label="image" href="https://www.instagram.com/jayantgoel001/" target="_blank"
                                data-toggle="tooltip" data-placement="left" data-html="true" title="<strong><em>Instagram</em></strong>">
-                                <i class="mdi mdi-instagram dark"></i>
+                                <i class="fab fa-instagram dark h6"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
@@ -739,7 +739,7 @@
             </div>
         </div>
     </div>
-    <p class="copyright-desc text-white mb-0 h6 mt-2" style="background-color: #242a35;text-align: center;padding: 12px 0">Designed with <i class="mdi mdi-heart text-danger"></i> By Jayant Goel</p>
+    <p class="copyright-desc text-white mb-0 h6 mt-2" style="background-color: #242a35;text-align: center;padding: 12px 0">Designed with <i class="fas fa-heart text-danger"></i> By Jayant Goel</p>
 </footer>
 <!-- footer end -->
 
