--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             Jayant Goel
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="mdi mdi-menu"></i>
+            <i class="fas fa-bars"></i>
         </button>
         <div  class="collapse navbar-collapse"  id="navbarCollapse">
             <ul class="navbar-nav ml-auto navbar-center" id="mySidenav" >
