--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta property="og:url" content="https://jayantgoel001.github.io" />
     <meta property="og:type" content="website" />
 
+
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Jayant Goel" />
     <meta name="twitter:description" content="Jayant Goel Personal Portfolio ♠ "/>
@@ -23,6 +24,8 @@
     <title>Jayant Goel ♠ </title>
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="manifest" href="manifest.json"/>
+
+    <meta name="google-site-verification" content="0muao767XOQs7xHi8v20pMOdR-0_csUTDfQ-5AJkbho" />
 
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <!-- Bootstrap core CSS -->
