--- a/index.html
+++ b/index.html
@@ -650,8 +650,9 @@
                         <i class="fas fa-street-view text-custom h3"></i>
                     </div>
                     <div class="contact-details">
-                        <p class="mb-0" style="color: white;font-size: 16px"
-                        >Ghaziabad, Uttar Pradesh, India</p>
+                        <p class="mb-0" style="color: white;font-size: 16px">
+                            <a href="http://maps.google.com/?q=Ghaziabad,Uttar+Pradesh">Ghaziabad, Uttar Pradesh, India</a>
+                        </p>
                     </div>
                 </div>
             </div>
