--- a/index.html
+++ b/index.html
@@ -750,11 +750,11 @@
 <script src="js/scrollspy.min.js"></script>
 
 <!-- Typed -->
-<script src="js/typed.js"></script>
+<script src="js/typed.min.js"></script>
 <script src="js/typed.init.js"></script>
 <!-- custom -->
-<script src="js/particles.js"></script>
-<script src="js/vanilla-tilt.js"></script>
+<script src="js/particles.min.js"></script>
+<script src="js/vanilla-tilt.min.js"></script>
 <script src="https://kit.fontawesome.com/b82917e056.js" crossorigin="anonymous"></script>
 <script src="app.js"></script>
 </body>
