--- a/index.html
+++ b/index.html
@@ -664,8 +664,12 @@
                         <i class="fas fa-mobile-alt text-custom h3"></i>
                     </div>
                     <div class="contact-details">
-                        <p class="mb-0"><a rel="noreferrer" aria-label="image" href="tel:+91-8377838183" style="color: white;font-size: 16px">+91-8377838183</a></p>
-                        <p class="mb-0"><a rel="noreferrer" aria-label="image" href="tel:+91-8076331756" style="color: white;font-size: 16px">+91-8076331756</a></p>
+                        <p class="mb-1">
+                            <a rel="noreferrer" aria-label="image" href="tel:+91-8377838183" style="color: white;font-size: 16px">+91-8377838183</a>
+                        </p>
+                        <p class="mb-1">
+                            <a rel="noreferrer" aria-label="image" href="tel:+91-8076331756" style="color: white;font-size: 16px">+91-8076331756</a>
+                        </p>
                     </div>
                 </div>
             </div>
