--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 </nav>
 
-<section class="bg-home" id="home" style="background-image: url('images/bgimg.webp')">
+<section class="bg-home" id="home">
     <div class="bg-overlay"></div>
     <div id="particles-js"></div>
     <div class="home-center">
