--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="mb-5 pb-3">
                         <i class="fas fa-user-graduate h1 text-muted"></i>
                     </div>
-                    <h3>About me</h3>
+                    <div class="h3 font-weight-bold">About me</div>
                     <p class="text-muted mx-auto mb-0 mt-4 para-desc">Experience, technologies and background.</p>
                 </div>
             </div>
