--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
         <div class="row justify-content-center txt-bg txt-bg-about">
             <div class="col-lg-6 pointer">
                 <div class="section-title text-center mb-4 pb-2">
-                    <div class="mb-5 pb-3"><i class="fas fa-user-graduate h1 text-muted"></i></div>
-                    <div class="h3 font-weight-bold">About me</div>
+                    <div class="mb-5 pb-3">
+                        <i class="fas fa-user-graduate h1 text-muted"></i>
+                    </div>
+                    <h3>About me</h3>
                     <p class="text-muted mx-auto mb-0 mt-4 para-desc">Experience, technologies and background.</p>
                 </div>
             </div>
