--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <div class="tab-pane fade show active" id="story" role="tabpanel" aria-labelledby="story-tab">
                         <div class="text-center">
                             <div class="about-img mt-5 mb-5">
-                                <img src="images/Profile-pic.webp" alt="Profile Image" class="img-fluid mx-auto d-block rounded-circle">
+                                <img src="images/Profile-pic.webp" alt="Profile Image" class="img-fluid mx-auto d-block rounded-circle" height="400" width="400">
                             </div>
                             <h3 class="mb-3">Jayant Goel
                                 <small class="text-muted"> - Full Stack Web Developer, Android & Data Science Enthusiast </small>
@@ -331,7 +331,7 @@
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
                     <a rel="noreferrer" aria-label="home" href="https://github.com/JayantGoel001/AI-Image-Caption-Bot" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/aiicb.webp" alt="1" />
+                        <img class="item-container img-fluid mx-auto" src="images/aiicb.webp" alt="1" width="1030" height="800"/>
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
                                 <h5>AI Image Caption Bot</h5>
@@ -348,7 +348,7 @@
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
                     <a rel="noreferrer" aria-label="home" href="https://github.com/JayantGoel001/AI-Music-Generation" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/aimg.webp" alt="1" />
+                        <img class="item-container img-fluid mx-auto" src="images/aimg.webp" alt="1" width="1030" height="800" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
                                 <h5>AI Music Generation</h5>
@@ -365,7 +365,7 @@
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
                     <a rel="noreferrer" aria-label="home" href="https://github.com/JayantGoel001/School-Donation-Analysis" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/sda.webp" alt="1" />
+                        <img class="item-container img-fluid mx-auto" src="images/sda.webp" alt="1" width="1030" height="800" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
                                 <h5>A School Donation Analysis</h5>
@@ -381,7 +381,7 @@
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
                     <a rel="noreferrer" aria-label="image" href="https://github.com/JayantGoel001/A-Social-Media" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/asm.webp" alt="1" />
+                        <img class="item-container img-fluid mx-auto" src="images/asm.webp" alt="1" width="1030" height="800" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
                                 <h5>A Social Media</h5>
@@ -398,7 +398,7 @@
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
                     <a rel="noreferrer" aria-label="image" href="https://github.com/JayantGoel001/E-Commerce-Site" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/ecs.webp" alt="1" />
+                        <img class="item-container img-fluid mx-auto" src="images/ecs.webp" alt="1" width="1030" height="800" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
                                 <h5>E-Commerce Site</h5>
@@ -413,7 +413,7 @@
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
                     <a rel="noreferrer" aria-label="image" href="https://github.com/JayantGoel001/URL-Shortner" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/us.webp" alt="1" />
+                        <img class="item-container img-fluid mx-auto" src="images/us.webp" alt="1" width="1030" height="800" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
                                 <h5>URL Shortner</h5>
