--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                         <i class="far fa-clone h1 text-muted"></i>
                     </div>
                     <h3>My Portfolio</h3>
-                    <p class="text-muted mx-auto mb-0 para-desc">Sample of some of my projects</p>
+                    <p class="text-muted mx-auto mb-0 mt-4 para-desc">Sample of some of my projects</p>
                 </div>
             </div>
         </div>
@@ -438,7 +438,7 @@
                         <i class="fas fa-infinity h1 text-muted"></i>
                     </div>
                     <h3>My Training</h3>
-                    <p class="text-muted mx-auto mb-0 para-desc">Certifications and Work Profile</p>
+                    <p class="text-muted mx-auto mb-0 mt-4 para-desc">Certifications and Work Profile</p>
                 </div>
             </div>
         </div>
@@ -603,7 +603,7 @@
                         <i class="fas fa-trophy h1 text-muted"></i>
                     </div>
                     <h3>My Achievements</h3>
-                    <p class="text-muted mx-auto mb-0 para-desc">Some of my Accomplishment.</p>
+                    <p class="text-muted mx-auto mb-0 mt-4 para-desc">Some of my Accomplishment.</p>
                 </div>
             </div>
         </div>
@@ -635,7 +635,7 @@
                         <i class="fas fa-headset h1"></i>
                     </div>
                     <h3 class="text-white">Contact me</h3>
-                    <p class="text-white-50 mx-auto mb-0 para-desc">Address, Phone Number and Email Address.</p>
+                    <p class="text-white-50 mx-auto mb-0 mt-4 para-desc">Address, Phone Number and Email Address.</p>
                 </div>
             </div>
         </div>
