--- a/index.html
+++ b/index.html
@@ -454,9 +454,9 @@
                     </div>
                     <div class="services-back-flip text-center bg-custom text-white p-4">
                         <div class="services-desc">
-                            <i>
+                            <em>
                                 Theatron is platform which provides environment of entertainment for which I created An Android Application using Kotlin with Firebase as Backend and Deployed It On Play Store.
-                            </i>
+                            </em>
                             <br>
                             <br>
                             <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/1Ahg2Gzz8oLBs495N4PT9a1fszNBcJUB9/view?usp=sharing"
@@ -480,8 +480,8 @@
                     <div class="services-back-flip text-center bg-custom text-white p-4">
                         <div class="services-desc">
                             <div class="services-icon">
-                                <i>The training included the basics and practical application of Android Development. I made a lot of projects on Integrating API's and Implementing Firebase in Android.
-                                </i>
+                                <em>The training included the basics and practical application of Android Development. I made a lot of projects on Integrating API's and Implementing Firebase in Android.
+                                </em>
                                 <br>
                                 <br>
                                 <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/1lSc9it--0LooJpp6A7riggSFZPVq2vn6/view?usp=sharing"
@@ -505,7 +505,7 @@
                     </div>
                     <div class="services-back-flip text-center bg-custom text-white p-4">
                         <div class="services-desc">
-                            <i> This course covered all the intuitions and theoretical aspects of Machine Learning and Data Science which included all the types of classifications, regression, Neural Network etc. </i>
+                            <em> This course covered all the intuitions and theoretical aspects of Machine Learning and Data Science which included all the types of classifications, regression, Neural Network etc. </em>
                             <br>
                             <br>
                             <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/1lZmX1wmZLo8ksY6NsrFM9cNfL8HWdMBn/view?usp=sharing"
@@ -530,7 +530,7 @@
                     </div>
                     <div class="services-back-flip text-center bg-custom text-white p-4">
                         <div class="services-desc">
-                            <i>Complete Web Development course which focused on both Front and Back-end Development, with an emphasis on the MEAN Stack.</i>
+                            <em>Complete Web Development course which focused on both Front and Back-end Development, with an emphasis on the MEAN Stack.</em>
                             <br>
                             <br>
                             <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/12THg9_3-KtjSRe7pLfw27_pqwkDtSQMx/view?usp=sharing"
@@ -554,7 +554,7 @@
                     <div class="services-back-flip text-center bg-custom text-white p-4">
                         <div class="services-desc">
                             <div class="services-icon">
-                                <i>The bootcamp served as a window for me for the Advanced Python course, as I had already done Python and it helped me to start applying my knowledge in more Advance and GUI Part.</i>
+                                <em>The bootcamp served as a window for me for the Advanced Python course, as I had already done Python and it helped me to start applying my knowledge in more Advance and GUI Part.</em>
                                 <br>
                                 <br>
                                 <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/1AdmAM40vQ_mfzz7pVUcUea2S38E6Epuz/view?usp=sharing"
@@ -577,9 +577,9 @@
                         </div>
                     </div>
                     <div class="services-back-flip text-center bg-custom text-white p-4">
-                        <i>
+                        <em>
                             Completed The Course on Data Structure and Algorithm which also included implementation of every Data Structure in Java and Scored 1st Rank in HackerEarth Coding Bootcamp.
-                        </i>
+                        </em>
                         <br>
                         <br>
                         <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/1FWIJ_NTA7Z31eIX7qBIlUnnottfjGsWf/view?usp=sharing"
