--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <div class="home-title text-center">
                             <h5 class="text-white-50 sub-title mb-3 font-weight-normal disable-select">Student</h5>
                             <h1 class="display-3">
-                                <span class="element text-white disable-select" data-elements="Jayant Goel, Data Science and Machine Learning Enthusiast, MEAN Stack Developer, Android Developer"></span>
+                                <span class="element text-white disable-select" data-elements="Jayant Goel, Data Science Enthusiast, Machine Learning Enthusiast, MEAN Stack Developer, Android Developer, Open Source Contributor"></span>
                             </h1>
                             <p class="text-light mx-auto para-desc disable-select">I am  Third-year student pursuing a Bachelor of Technology in Computer Science Engineering from Jaypee Institute Of Information Technology, <br> Sector 62 </p>
                             <div class="mt-4 pt-2">
@@ -106,7 +106,7 @@
                     <div class="mb-5 pb-3">
                         <i class="fas fa-user-graduate h1 text-muted"></i>
                     </div>
-                    <h3>About me</h3>
+                    <div class="h3 font-weight-bold">About me</div>
                     <p class="text-muted mx-auto mb-0 mt-4 para-desc">Experience, technologies and background.</p>
                 </div>
             </div>
@@ -130,9 +130,9 @@
                             <div class="about-img mt-5 mb-5">
                                 <img src="images/Profile-pic.webp" alt="Profile Image" class="img-fluid mx-auto d-block rounded-circle" height="400" width="400">
                             </div>
-                            <h3 class="mb-3">Jayant Goel
+                            <div class="h3 font-weight-bold mb-3">Jayant Goel
                                 <small class="text-muted"> - Full Stack Web Developer, Android & Data Science Enthusiast </small>
-                            </h3>
+                            </div>
                             <p class="text-muted">
                                 An Enthusiast Coder Eager to contribute to team success through hard work, skills, attention to details and excellent organizational skills.
                                 Currently Exploring the world of Technology as SDE Intern at Talent Decrypt and as a Third year student at Jaypee Institute Of Information Technology.
@@ -319,7 +319,7 @@
                     <div class="mb-5 pb-3">
                         <i class="far fa-clone h1 text-muted"></i>
                     </div>
-                    <h3>My Portfolio</h3>
+                    <div class="h3 font-weight-bold">My Portfolio</div>
                     <p class="text-muted mx-auto mb-0 mt-4 para-desc">Sample of some of my projects</p>
                 </div>
             </div>
@@ -437,7 +437,7 @@
                     <div class="mb-5 pb-3">
                         <i class="fas fa-infinity h1 text-muted"></i>
                     </div>
-                    <h3>My Training</h3>
+                    <div class="h3 font-weight-bold">My Training</div>
                     <p class="text-muted mx-auto mb-0 mt-4 para-desc">Certifications and Work Profile</p>
                 </div>
             </div>
@@ -447,7 +447,7 @@
                 <div class="services-flip-box mt-4 pt-2">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
-                            <h5 class="mb-3">Theatron</h5>
+                            <div class="h5 font-weight-bold mb-3">Theatron</div>
                             <p class="text-muted mb-0">Internship - Android Development</p>
                             <p class="text-muted mb-0"> 10 Feb, 2020 - 30 Sept, 2020</p>
                         </div>
@@ -472,7 +472,7 @@
                 <div class="services-flip-box mt-4 pt-1">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
-                            <h5 class="mb-3">Android Development Using Kotlin </h5>
+                            <div class="h5 font-weight-bold mb-3">Android Development Using Kotlin </div>
                             <p class="text-muted mb-0">Classroom Training - Coding Blocks</p>
                             <p class="text-muted mb-0">21 Aug, 2019 - 17 Dec, 2019</p>
                         </div>
@@ -498,7 +498,7 @@
                 <div class="services-flip-box mt-4 pt-2">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
-                            <h5 class="mb-3">Data Science</h5>
+                            <div class="h5 font-weight-bold mb-3">Data Science</div>
                             <p class="text-muted mb-0">Classroom/Live Training - Coding Blocks</p>
                             <p class="text-muted mb-0">29 Dec, 2019 - 05 May, 2020</p>
                         </div>
@@ -523,7 +523,7 @@
                 <div class="services-flip-box mt-4 pt-2">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
-                            <h5 class="mb-3">The Complete 2020 Web Developer Master Course</h5>
+                            <div class="h5 font-weight-bold mb-3">The Complete 2020 Web Developer Master Course</div>
                             <p class="text-muted mb-0"> Online Training - Udemy </p>
                             <p class="text-muted mb-0"> 1 July, 2020 - 25 Aug, 2020 </p>
                         </div>
@@ -546,7 +546,7 @@
                 <div class="services-flip-box mt-4 pt-2">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
-                            <h5 class="mb-3">Python Bootcamp 2020 Build 15 Working Applications And Games </h5>
+                            <div class="h5 font-weight-bold mb-3">Python Bootcamp 2020 Build 15 Working Applications And Games </div>
                             <p class="text-muted mb-0">Online Training - Udemy</p>
                             <p class="text-muted mb-0">15 Oct, 2020 - 27 Dec, 2020</p>
                         </div>
@@ -571,7 +571,7 @@
                 <div class="services-flip-box mt-4 pt-2">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
-                            <h5 class="mb-3">Data Structure and Algorithm With Java Bootcamp</h5>
+                            <div class="h5 font-weight-bold mb-3">Data Structure and Algorithm With Java Bootcamp</div>
                             <p class="text-muted mb-0">Bootcamp - Code For Cause</p>
                             <p class="text-muted mb-0">29 Aug, 2020 - 19 Sept, 2020</p>
                         </div>
@@ -602,7 +602,7 @@
                     <div class="mb-5 pb-3">
                         <i class="fas fa-trophy h1 text-muted"></i>
                     </div>
-                    <h3>My Achievements</h3>
+                    <div class="h3 font-weight-bold">My Achievements</div>
                     <p class="text-muted mx-auto mb-0 mt-4 para-desc">Some of my Accomplishment.</p>
                 </div>
             </div>
